--- a/css/payment-form.css
+++ b/css/payment-form.css
@@ -27,19 +27,22 @@ label span {
     text-align: right;
 }
 
-input, textarea {
+input,
+textarea {
     font: 1em sans-serif;
     width: 250px;
     box-sizing: border-box;
     border: 1px solid #999;
 }
 
-input[type=checkbox], input[type=radio] {
+input[type=checkbox],
+input[type=radio] {
     width: auto;
     border: none;
 }
 
-input:focus, textarea:focus {
+input:focus,
+textarea:focus {
     border-color: #000;
 }
 
@@ -60,20 +63,20 @@ button {
     margin: 20px 0 0 124px;
     border-radius: 8px;
     border: none;
-    text-align:center;
+    text-align: center;
     padding-top: 2px;
 }
 
 label {
-  position: relative;
+    position: relative;
 }
 
 label em {
-  position: absolute;
-  right: 5px;
-  top: 20px;
+    position: absolute;
+    right: 5px;
+    top: 20px;
 }
 
-body{
-    background-color:wheat;
+body {
+    background-color: wheat;
 }
